--- a/DropBear.Codex.Blazor/wwwroot/styles/base.css
+++ b/DropBear.Codex.Blazor/wwwroot/styles/base.css
@@ -68,7 +68,7 @@
   --section-padding: var(--spacing-md, 10px); /* Updated to reuse spacing variable */
   --section-bg-color: var(--clr-grey-100, hsl(206, 30%, 95%));
   --section-border: var(--border-default, none); /* Optionally add a global border variable */
-  --section-border-radius: var(--br-sm, 0); /* Updated to use existing border radius variable */
+  --section-border-radius: var(--br-md, 0); /* Updated to use existing border radius variable */
 
   /* Gradient Degrees */
   --deg-0: 0deg;
@@ -95,14 +95,14 @@
 
   --light-header-gradient: linear-gradient(
     90deg,
-    var(--clr-grey-200),
-    var(--clr-grey-500)
+    var(--clr-grey-100),
+    var(--clr-grey-200)
   );
 
   --light-footer-gradient: linear-gradient(
     90deg,
-    var(--clr-grey-200),
-    var(--clr-grey-500)
+    var(--clr-grey-100),
+    var(--clr-grey-200)
   );
 
   /* Themes */
